--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@import url('https://fonts.cdnfonts.com/css/samarkan');
 
-html {
+/* Add Samarkan Font */
+@font-face {
+  font-family: 'Samarkan';
+  src: url('https://db.onlinewebfonts.com/t/056353a27c68233bc7a545e11e028cab.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@theme inline {
   background: #0C0019;
 }
 
