--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-/* Add Samarkan Font */
-@font-face {
-  font-family: 'Samarkan';
-  src: url('https://db.onlinewebfonts.com/t/056353a27c68233bc7a545e11e028cab.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+/* Add Cinzel Decorative Font (Google Fonts) */
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap');
 
 body {
   background-color: #0C0019;
@@ -21,5 +15,5 @@ body {
 }
 
 .font-samarkan {
-  font-family: 'Samarkan', sans-serif;
+  font-family: 'Cinzel Decorative', cursive;
 }
